# ray-tracer-challenge

./: .gitignore  CMakeLists.txt  README.md
src/: Camera.h  Canvas.cpp  Canvas.h  Color.h  Computations.h  Intersection.h  Light.h  Material.h  Matrix.cpp  Matrix.h  Point.h  Ray.h  Shape.h  Sphere.h  Transform.cpp  Transform.h  Tuple.cpp  Tuple.h  Util.h  Vector.h  World.h  build.sh  chapter1.cpp  chapter1_test.cpp  chapter2.cpp  chapter2_test.cpp  chapter3_test.cpp  chapter4.cpp  chapter4_test.cpp  chapter5.cpp  chapter5_test.cpp  chapter6.cpp  chapter6_test.cpp  chapter7.cpp  chapter7_test.cpp  main.cpp  test.cpp
